[package]
name = "miru-i18n-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.23"
colored = "2.1.0"
hex = "0.4.3"
regex = "1.11.1"
# indexmap = { version = "2.7.0", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
ring = "0.17.8"
serde_json = { version = "1.0.133", features = ["preserve_order"] }
